config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,5 +54,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://majestic-sparrow-0b0c1.netlify.app"
 }
