--- a/content/data/config.json
+++ b/content/data/config.json
@@ -53,6 +53,14 @@
                 "url": "https://dev.to/",
                 "new_window": true
             }
+        ],
+        "links": [
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "new_window": false,
+                "no_follow": false
+            }
         ]
     },
     "domain": "https://majestic-sparrow-0b0c1.netlify.app"
