--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,6 +21,12 @@
             {
                 "label": "Ipsum",
                 "url": "/ipsum/"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "new_window": false,
+                "no_follow": false
             }
         ]
     },
