--- a/content/data/config.json
+++ b/content/data/config.json
@@ -78,6 +78,12 @@
                 "url": "#",
                 "new_window": false,
                 "no_follow": false
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "new_window": false,
+                "no_follow": false
             }
         ]
     },
